--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # MySQL properties
-spring.datasource.url=jdbc:mysql://localhost:3306/db_Kata?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/db3?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
